finished the debugger and ready to sumbit

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ CFLAGS  = -Wall -pedantic -std=c99
 
 .PHONY: all clean
 
-all: assemble emulate
+all: assemble emulate debugger
 
 parser.o: parser.c parser.h table.h
 
@@ -19,13 +19,19 @@ assemble.o: assemble.c assemble.h parser.h checkOptype.h tokeniser.h table.h
 
 emulate.o : emulate.c
 
+debugger.o: debugger.c
+
 assemble: assemble.o parser.o checkOptype.o tokeniser.o table.o
 	$(CC)  $(CFLAGS) -o $@ $^
 
-emulate: emulate.o
+debugger: debugger.o
 	$(CC) $(CFLAGS) -o $@ $^
 
+emulate: emulate.o
+	$(CC) $(CFLAGS) -o $@ $^
+	
 clean:
 	rm -f *.o
 	rm -f assemble
 	rm -f emulate
+	rm -f debugger
